# foyer-dolphin

./: .gitmodules  CMakeLists.txt  Readme.md  build_dolphin_standalone_nro.sh
Source/Core/: CMakeLists.txt
Source/Core/AudioCommon/: AudioCommon.cpp
Source/Core/Common/: Arm64Emitter.cpp  Arm64Emitter.h  ArmCPUDetect.cpp  CMakeLists.txt  CodeBlock.h  DirectIOFile.cpp  FileUtil.cpp  FileUtil.h  IniFile.cpp  IniFile.h  MemArena.h  MemArenaAndroid.cpp  MemArenaDarwin.cpp  MemArenaSwitch.cpp  MemArenaUnix.cpp  MemArenaWin.cpp  MemoryUtil.cpp  MemoryUtil.h  Network.cpp  Random.cpp  StringUtil.cpp  Thread.cpp  Timer.cpp  WindowSystemInfo.h  WorkQueueThread.h
Source/Core/Core/: CMakeLists.txt  Core.cpp  MachineContext.h  MemTools.cpp  MemTools.h  NetPlayClient.h  NetPlayCommon.h  NetPlayProto.h  State.cpp  WiiRoot.cpp
Source/Core/Core/Boot/: Boot_BS2Emu.cpp
Source/Core/Core/Config/: GraphicsSettings.cpp  GraphicsSettings.h  MainSettings.h
Source/Core/Core/HW/: GCPadEmu.cpp  Memmap.cpp  Memmap.h
Source/Core/Core/HW/DSPHLE/: DSPHLE.cpp  MailHandler.cpp
Source/Core/Core/HW/DSPLLE/: DSPLLE.cpp
Source/Core/Core/HW/DVD/: AMMediaboard.cpp
Source/Core/Core/HW/EXI/: EXI_Device.cpp
Source/Core/Core/HW/SI/: SI.cpp  SI_Device.cpp
Source/Core/Core/HW/WiimoteEmu/: WiimoteEmu.cpp
Source/Core/Core/HW/WiimoteEmu/Extension/: Classic.cpp  Classic.h  Nunchuk.cpp
Source/Core/Core/HW/WiimoteReal/: WiimoteReal.cpp
Source/Core/Core/IOS/: IOS.cpp
Source/Core/Core/IOS/Network/: Socket.h
Source/Core/Core/PowerPC/: GDBStub.cpp
Source/Core/Core/PowerPC/CachedInterpreter/: CachedInterpreter.cpp
Source/Core/Core/PowerPC/JitArm64/: Jit.cpp  JitArm64Cache.cpp  JitArm64_BackPatch.cpp  JitArm64_FloatingPoint.cpp  JitArm64_Paired.cpp  JitAsm.cpp
Source/Core/Core/PowerPC/JitCommon/: JitBase.cpp  JitBase.h  JitCache.cpp  JitCache.h
Source/Core/DolphinNX/: Audio.cpp  Audio.h  BootTrace.h  CMakeLists.txt  Host.cpp  Input.cpp  Input.h  NetPlayStubs.cpp  TicoCore.cpp  TicoCore.h  main.cpp  nx-toolchain.cmake
Source/Core/DolphinNX/Assets/lang/: en.json  es.json  fr.json  ja.json  pt.json  zh.json
Source/Core/DolphinNX/Overlay/: Overlay.cpp  Overlay.h  TranslationManager.cpp  TranslationManager.h  VulkanOverlay.cpp  VulkanOverlay.h
Source/Core/InputCommon/: CMakeLists.txt  GCAdapter.cpp
Source/Core/InputCommon/ControllerEmu/ControlGroup/: IMUCursor.cpp  IMUCursor.h
Source/Core/InputCommon/ControllerInterface/: ControllerInterface.cpp
Source/Core/VideoBackends/OGL/: ProgramShaderCache.cpp
Source/Core/VideoBackends/Vulkan/: StagingBuffer.cpp  VKGfx.cpp  VKGfx.h  VKSwapChain.cpp  VKTexture.cpp  VulkanContext.cpp  VulkanLoader.cpp  VulkanLoader.h
Source/Core/VideoCommon/: AsyncShaderCompiler.cpp  CMakeLists.txt  DriverDetails.cpp  OnScreenDisplay.cpp  OnScreenUI.cpp  PerformanceMetrics.cpp  PerformanceTracker.cpp  Present.cpp  ShaderCache.cpp  VertexLoaderARM64.cpp  VertexLoaderARM64.h  VertexLoaderManager.cpp  VideoBackendBase.cpp  VideoConfig.h
Source/Core/VideoCommon/Assets/: CustomAssetCache.cpp
